Fix toolbar title overflow

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -99,7 +99,7 @@ $header-nav-width-mobile: 50px !default;
 $toolbar-height: 50px !default;
 $toolbar-padding: 10px !default;
 $toolbar-bg-color: #292929 !default;
-$toolbar-nav-width: 80px !default;
+$toolbar-nav-width: 60px !default;
 
 //
 // Card
